<resources>
    <string name="app_name">StudyManagementApp</string>
    <string name="title">STUDY</string>
    <string name="pause">PAUSE</string>
    <string name="start">START</string>
    <string name="reset">RESET</string>
    <string name="memo">MEMO</string>
    <string name="calculator">CALCULATOR</string>
    <string name="alarm_clock">ALARM CLOCK</string>
    <string name="website">QUICK BROWSING</string>
    <string name="memo_title">MEMO</string>
    <string name="memo_save">SAVE</string>
    <string name="memo_back">BACK</string>
    <string name="set_clock">SET</string>
    <string name="cancel_clock">CANCEL</string>
    <string name="alarm_clock_title">ALARM CLOCK</string>
    <string name="alarm_clock_back">BACK</string>
    <string name="calculator_back">BACK</string>
    <string name="alarm_clock_content">no alarm clock</string>
</resources>