<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="28dp"
    tools:context=".MemoActivity">

    <TextView
        android:id="@+id/memo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/memo_title"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/memo_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/edit_text"
        android:enabled="true"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:maxLines="50"
        android:minLines="20"
        android:layout_marginBottom="24dp"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/memo_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/memo_save"
        android:layout_marginBottom="12dp"
        android:textSize="20sp"
        android:onClick="save" />

    <Button
        android:id="@+id/memo_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/memo_back"
        android:textSize="20sp"
        android:onClick="back" />


</LinearLayout>